@@ -25,7 +25,8 @@
 # Set branch names, tags or commit SHA.
 # If EW_GIT_REF is empty, then default is 'master'.
 # EW_GIT_REF = v7.11
-EW_GIT_REF = d59707fc
+# EW_GIT_REF = d59707fc
+EW_GIT_REF = a4bb3e30
 
 # Set Default Earthworm Installation (EW_INSTALLATION and EW_INST_ID)
 EW_INSTALL_INSTALLATION = INST_INGV
