@@ -8,7 +8,8 @@ services:
   hew3:
     container_name: hew3
     # image: ew-sandbox:ea6cf701
-    image: ew-sandbox:d59707fc
+    # image: ew-sandbox:d59707fc
+    image: ew-sandbox:a4bb3e30
     command: /opt/scripts/ew_startstop_trap_pau.sh
     ports:
       - 16021-16034:16021-16034
@@ -26,7 +27,8 @@ services:
 
   hew19:
     container_name: hew19
-    image: ew-sandbox:d59707fc
+    # image: ew-sandbox:d59707fc
+    image: ew-sandbox:a4bb3e30
     command: /opt/scripts/ew_startstop_trap_pau.sh
     # ports:
     # - ...
@@ -43,12 +45,13 @@ services:
 
   hew29:
     container_name: hew29
-    environment:
-      - EW_HOSTNAME=hew29
-    image: ew-sandbox:d59707fc
+    # image: ew-sandbox:d59707fc
+    image: ew-sandbox:a4bb3e30
     command: /opt/scripts/ew_startstop_trap_pau.sh
     # ports:
     # - ...
+    environment:
+      - EW_HOSTNAME=hew29
     volumes:
       - /home/ew/ew_envs/hew29_env:/opt/ew_env:consistent
     restart: unless-stopped
